--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^6.0.0",
+    "@tailwindcss/vite": "^4.0.0",
     "tailwindcss": "^4.0.0",
-    "@tailwindcss/vite": "^4.0.0"
+    "vite": "^6.0.0"
+  },
+  "dependencies": {
+    "leaflet": "^1.9.4",
+    "pdf-parse": "^2.4.5"
   }
 }
